# beancount-homemade-importers

./: README.md  environment.yml  pixi.toml  pyproject.toml
documents.tmp/: youqian-example.csv
importers/: boc.import  boc.py  cmb.import.py  cmb_debit_pdf.import  cmb_debit_pdf.py  cmb_eml.import  cmb_eml.py  cmb_json.import  cmb_json.py  cmbc_pdf.import  cmbc_pdf.py  strip_blank.py  wechat.import  wechat.py
importers/youqian/: accountInit.py  playground.py  youqian.import.py  youqianDict.py  youqian_expense.import  youqian_income.import
