[tool.poetry]
name = "beancount-homemade-importers"
version = "0.1.0"
description = "some scripts for beancount"
authors = ["He Yeshuang <yeshuanghe@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.6"
smart-importer = "^0.1.0"
beancount = "^2.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
